--- a/assets/epay/epay_request.html
+++ b/assets/epay/epay_request.html
@@ -8,18 +8,30 @@
   </head>
 
   <body>
-    <h1 id="title">eSewa ePay</h1>
+    <h1 id="title">loading......</h1>
 
     <form action="https://uat.esewa.com.np/epay/main" method="POST" id="form">
-      <input value="100" name="tAmt" type="" />
-      <input value="90" name="amt" type="" />
-      <input value="5" name="txAmt" type="" />
-      <input value="2" name="psc" type="" />
-      <input value="3" name="pdc" type="" />
-      <input value="EPAYTEST" name="scd" type="" />
-      <input value="ee2c3ca1-696b-4cc5-a6be-2c40d929d453" name="pid" type="" />
-      <input value="https://developer.esewa.com.np/#/" type="" name="su" />
-      <input value="https://developer.esewa.com.np/#/" type="" name="fu" />
+      <input value="100" name="tAmt" type="hidden" />
+      <input value="90" name="amt" type="hidden" />
+      <input value="5" name="txAmt" type="hidden" />
+      <input value="2" name="psc" type="hidden" />
+      <input value="3" name="pdc" type="hidden" />
+      <input value="EPAYTEST" name="scd" type="hidden" />
+      <input
+        value="ee2c3ca1-696b-4cc5-a6be-2c40d929d453"
+        name="pid"
+        type="hidden"
+      />
+      <input
+        value="https://developer.esewa.com.np/#/"
+        type="hidden"
+        name="su"
+      />
+      <input
+        value="https://developer.esewa.com.np/#/"
+        type="hidden"
+        name="fu"
+      />
       <input value="Pay now with eSewa ePay" type="submit" />
     </form>
   </body>
@@ -36,9 +48,7 @@
       oForm.elements["pid"].value = pid;
       oForm.elements["su"].value = su;
       oForm.elements["fu"].value = fu;
-
-      // requestPayment(tAmt = 1000, amt = 200, txAmt = 100, psc = 20, pdc = 10, scd = "EPAYTEST", pid = "1", su = "#", fu = "#");
+      oForm.submit();
     }
   </script>
 </html>
-Footer
